--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -3,3 +3,62 @@
 
 ## Dovetail genome assembly
 
+We look forward to working with you on this project! I will be your Scientific Project Manager. This email covers a number of important topics to ensure a smooth and successful project with us. The annotation details will follow shortly.
+
+1. Dovetail Sample Submission and Instructions:
+
+  a. To begin the process, we will need to receive your sample. Important: Please confirm the date you will be providing the sample as we need to plan for the resources.
+
+  b. Attached is our Sample Submission Form. It is imperative that this is completed fully and accurately to ensure our lab is able to effectively identify and receive/log your samples in our Laboratory Information System (LIMS). Your unique LIMS ID is REV2777. Please inform me when your samples are shipping and provide a copy of the form to me; also, please put a copy inside the shipment with your samples.
+
+2. Sample Preparation Guideline:
+
+  a. Please review our Sample Preparation Guideline, attached, and refer to the PacBio Sample Preparation and Omni-C Sample Preparation sections of the Guide.
+
+  b. The minimum sample quantity listed on the Sample Preparation Guidelines is intended for each step of your assembly, it is not cumulative. Please either send separate clearly labeled samples for each library type, or one cumulative sample that is of greater quantity than the cumulative minimum requirements for each step of your project.
+
+1. Annotation Species Information Form
+
+  a. In order for us to predict genes as accurately as possible, we will need more information on your species. Attached is the Annotations Species Form and Annotation Technical Note, please fill out all information (Please transfer the data via SFTP in addition to referencing files names on this form).
+  
+  b. The Annotation Species Form contains all the relevant explanations and instructions to guide you through the process.
+
+  c. It is recommended that you start this process now, and complete your list of genes for manual curation. Not having this information completed is a common cause for annotation projects delay. We do not start annotation until all of the data has been uploaded and the form is completely filled out, including genes for manual curation.
+
+  d. Please fill this out and send us it back to us.
+
+  e. Please upload your dataset to our sftp using the credentials below. If you are unfamiliar using terminal, "please use an SFTP user interface such as FileZilla®. (https://filezilla-project.org/)". All data must be submitted to initiate annotation.
+
+SFTP Login Information:
+
+Username: REV2788@sftp.dtgb.io
+
+Password: &eDQpxzhtZ$7*g23s6fJuYQrG5PLI4
+
+ALL Data must be submitted to initiate annotation.
+
+3. RNA-seq Sample Submission:
+
+  a. You will be contacted separately by our Assembly Manager, Tom Swale, with instructions on submitting your sample to Genewiz for RNA-seq, once we get to the Omni-C Library preparation step in your project.
+
+          
+
+Please let me know if you have any questions. Also please reply all to this email to include any other parties that need to receive project updates and final deliveries. We are excited to get started on your project!
+
+Sincerely,
+
+ 
+
+Jasmine Haimovitz
+
+Scientific Project Manager | Dovetail Genomics, LLC
+
+
+
+## Remy thoughts
+
+Overall, for PacBio we could send a purified DNA sample or a flash frozen tissue sample (stored -80). However they require flash frozen tissue for the Omni-C library. 
+
+If we were to submit purified DNA for the PacBio library they expect 50+ kbp molecular weight, which in my experience is very hard to get unless you extract with phenol-chloroform or extract very VERY fresh tissue. 
+
+Let me know what you think. Do we have samples in hand that might work or should we plan a collection for this sample?
