--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -79,6 +79,7 @@ Let me know what you think. Do we have samples in hand that might work or should
 - [ ] Dovetail
   - [x] what kind of storage for the DNA sample we send? - flash frozen
   - [x] which tissue? muscle tissue
+  - [ ] Example of methods description for a publication
 
 - [ ] Collections
   - [ ] Which tissues? How many can we sample? 
