--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -73,6 +73,7 @@ Let me know what you think. Do we have samples in hand that might work or should
   - [ ] Mass Bay Charter Boat Captain - can we bring liquid N2 on the boat - or keep fish alive untile we back to shore?
   - [ ] RI people who catch BSB - can we bring liquid N2 on the boat - or keep fish alive untile we back to shore?
   - [ ] NC - Chris Bailey - ask if he can flash freeze - which tissue?
+  - [ ] AUP / IACUC status?
 
 - [ ] Remy will send summary budget and clarify annotation
 
