--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -83,10 +83,11 @@ Let me know what you think. Do we have samples in hand that might work or should
   - [ ] Example of methods description for a publication
 
 - [ ] Collections
-  - [ ] Which tissues? How many can we sample? 
-  - [ ] 12 fish, flash frozen muscle, fin(?), liver, heart, brain (?)
-  - [ ] Ask other people what their experience has been
-  - [ ] Liquid N2 - Katie or Thais
+  - [ ] Which tissues for DNA/RNA? How many can we sample? 
+   - [ ] 12 fish, flash frozen muscle, fin(?), liver, heart, brain (?)
+   - [ ] Ask other people what their experience has been
+   - [ ] Liquid N2 - Katie or Thais
+ - [ ] What other things do you need to do to process the fish? Where can we store whole fish until they can be processed?
 
 - [ ] Onboarding - how does it work?
 - [ ] Access
