--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -75,7 +75,7 @@ Let me know what you think. Do we have samples in hand that might work or should
   - [ ] NC - Chris Bailey - ask if he can flash freeze - which tissue?
   - [ ] AUP / IACUC status?
 
-- [ ] Remy will send summary budget and clarify annotation
+- [x] Remy will send summary budget and clarify annotation
 
 - [ ] Dovetail
   - [x] what kind of storage for the DNA sample we send? - flash frozen
