--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -93,3 +93,16 @@ Let me know what you think. Do we have samples in hand that might work or should
 - [ ] Access
   - [ ] sponsor NU account ? https://neuidm.neu.edu/idm/user/anonWorkItemEdit.jsp?id=%23ID%23D591%3A95F8BB84A71%3A6E9D5ED3%3A37A0A4D3B08A421D#_ga=2.30157439.1569047752.1624901675-419605191.1623692929
   - [ ] Katie will email Ryan and ask
+
+
+## RNA tissue extraction
+### Sara Schaal
+ *S:* I had success extracting RNA with all three tissues I collected: fin, white muscle, and gill. However, there was variability and white muscle was the worst in consistency across different samples. So I ended up focusing on just *fin and gill* for the rest of my collections. My project went a different route so I didn’t do many more extractions other than the first round so this information is only a sample size of around 12 individuals for each tissue type.
+ 
+ *R:* Thanks for the information! This is really interesting. We were planning to use white muscle but we might reconsider given the variability. 
+
+Out of curiosity, was there a specific order you collected these tissues in? I am guessing muscle might have taken the longest to extract and put in RNA later. Just wondering whether that could have caused the variability you saw. 
+
+*S:* Yeah that was exactly our thought when we were doing these collections. Harvesting the three tissues just might have caused too much time to pass before getting into the RNA later. So based on my research questions, we wanted to focus on gill and fin. I think gill actually took the longest to harvest for me, but I did white muscle last in my collections so time could definitely play a role in my variable extraction results.
+
+### Moises Bernal
