--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -97,12 +97,24 @@ Let me know what you think. Do we have samples in hand that might work or should
 
 ## RNA tissue extraction
 ### Sara Schaal
- **S:** I had success extracting RNA with all three tissues I collected: fin, white muscle, and gill. However, **there was variability and white muscle was the worst in consistency across different samples. So I ended up focusing on just fin and gill** for the rest of my collections. My project went a different route so I didn’t do many more extractions other than the first round so this information is only a sample size of around 12 individuals for each tissue type.
- 
- **R:** Thanks for the information! This is really interesting. We were planning to use white muscle but we might reconsider given the variability. 
-
-Out of curiosity, was there a specific order you collected these tissues in? I am guessing muscle might have taken the longest to extract and put in RNA later. Just wondering whether that could have caused the variability you saw. 
-
-**S:** Yeah that was exactly our thought when we were doing these collections. Harvesting the three tissues just might have caused too much time to pass before getting into the RNA later. So based on my research questions, we wanted to focus on gill and fin. I think gill actually took the longest to harvest for me, but **I did white muscle last in my collections so time could definitely play a role in my variable extraction results.**
+- collected fin, white muscle, and gill. 
+- White muscle showed the most variability so she focused on fin and gill
+- harvesting gill took the longest
+- muscle was always the last to be collected so time could be driving the quality variability
 
 ### Moises Bernal
+-Pacbio- 2 smart ccells - full chromosome level genome
+  - assembler- HIfi ASM
+  - no need for illumina sequences to polish
+ Transcriptome- Novogene 
+ -brain, gills, liver, muscle, heart, eye, gonads (if present), fin (doesn't have too much RNA) 
+ - heart and liver have more gene expression
+ - 10% muscle, 10% gills, 40% brain, 
+ - same fish for genome and transcriptome.
+ - RNA latter, (celia used trisol)
+ -  less toxic and better for long term preserve
+ -  room temp ~1 week
+ -  Zimo- RNA/DNA shield- then RNA extraction from 
+ -  trisol needs to be cleaned 
+ -  20-25 million reads $400 Novogene (library prep + sequencing)
+  - 
