--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -103,18 +103,18 @@ Let me know what you think. Do we have samples in hand that might work or should
 - muscle was always the last to be collected so time could be driving the quality variability
 
 ### Moises Bernal
--Pacbio- 2 smart ccells - full chromosome level genome
+- Pacbio- 2 smart ccells - full chromosome level genome
   - assembler- HIfi ASM
   - no need for illumina sequences to polish
- Transcriptome- Novogene 
- -brain, gills, liver, muscle, heart, eye, gonads (if present), fin (doesn't have too much RNA) 
+- Transcriptome- Novogene 
+ - brain, gills, liver, muscle, heart, eye, gonads (if present), fin (doesn't have too much RNA) 
  - heart and liver have more gene expression
- - 10% muscle, 10% gills, 40% brain, 
- - same fish for genome and transcriptome.
- - RNA latter, (celia used trisol)
- -  less toxic and better for long term preserve
- -  room temp ~1 week
- -  Zimo- RNA/DNA shield- then RNA extraction from 
- -  trisol needs to be cleaned 
- -  20-25 million reads $400 Novogene (library prep + sequencing)
-  - 
+ - 10% muscle, 10% gills, 40% brain, etc.. 
+ - they used same fish for genome and transcriptome
+ - store in RNA later, (celia uses trisol, trisol needs to be cleaned before library prep)
+ - RNA later is less toxic and better for long term preserve
+ - can keep at room temp ~1 week (good for the field)
+ - ZIMO- RNA/DNA shield- then RNA extraction from with Zimo
+ 
+ -  ~20-25 million reads $400 Novogene (library prep + sequencing)
+ 
