--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -107,7 +107,7 @@ Let me know what you think. Do we have samples in hand that might work or should
   - assembler- HIfi ASM
   - no need for illumina sequences to polish
 - Transcriptome- Novogene 
-  - ~20-25 million reads $400 Novogene (library prep + sequencing)
+  - ~20-25 million reads = $400 Novogene (library prep + sequencing)
   - brain, gills, liver, muscle, heart, eye, gonads (if present), fin (doesn't have too much RNA) 
   - heart and liver have more gene expression
   - 10% muscle, 10% gills, 40% brain, etc.. 
