--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -66,7 +66,7 @@ Let me know what you think. Do we have samples in hand that might work or should
 
 ## To-Do
 
-- [ ] Thais send ethanol vials to Marissa (Katie)
+- [x] Thais send ethanol vials to Marissa (Katie)
 
 - [ ] Jon Grabowski
   - [ ] state permits
@@ -92,7 +92,7 @@ Let me know what you think. Do we have samples in hand that might work or should
 - [ ] Onboarding - how does it work?
 - [ ] Access
   - [ ] sponsor NU account ? https://neuidm.neu.edu/idm/user/anonWorkItemEdit.jsp?id=%23ID%23D591%3A95F8BB84A71%3A6E9D5ED3%3A37A0A4D3B08A421D#_ga=2.30157439.1569047752.1624901675-419605191.1623692929
-  - [ ] Katie will email Ryan and ask
+  - [x] Katie will email Ryan and ask
 
 
 ## RNA tissue extraction
