--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -117,4 +117,44 @@ Let me know what you think. Do we have samples in hand that might work or should
   - can keep at room temp ~1 week (good for the field)
   - ZIMO- RNA/DNA shield- then RNA extraction from with Zimo
 
+
+## DOVETAIL TISSUE SHIPMENT
+
+###1.4. PacBio Marine Animals/Invertebrates
+**Amount: 200+ mg**
+Type: Assembling PacBio libraries for marine animals (including fish, oysters, scallops and shrimp) is often more difficult than for other animals. Their tissues may contain high concentrations of several metabolic compounds and enzymes, e.g., mucopolysaccharides and alkaline phosphatases, which interfere with the PacBio library procedure. If such difficulties are expected, please communicate them to your project manager.  
+
+Recommended tissue sources in the preferred order are:
+1. Newly hatched larvae
+2. Sperm
+3. Blood
+4. Muscle
+
+Preparation: Flash freeze tissue in liquid nitrogen and store at -80°C prior to shipping.
+
+**Shipping:**
+  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains
+frozen throughout shipment.
+  - It is recommended to include 5-10 pounds of dry ice for each 24-hour period of the shipment. Please pack considering potential customs, or other ship delays.
+
+### 2.6. Omni-C Marine Animals/Invertebrates
+**Amount: Minimum of 500 mg.**
+Type: Assembling Dovetail Omni-C libraries for marine invertebrates is often more difficult than for other animals. Their tissues may contain high concentrations of several metabolic compounds and enzymes, e.g., mucopolysaccharides and alkaline phosphatases, which interfere with the library construction procedure. If such difficulties are expected, please communicate them to your project manager.  
+
+Recommended tissue sources in the preferred order are:
+1. Internal organs (applicable for larger marine invertebrates)
+2. Newly hatched larvae
+3. Sperm
+4. Blood
+5. Muscle
+
+Note: Mantle tissue does not perform well in the Dovetail Omni-C protocol. As such, usage of mantle tissue is not recommended.
+
+**Preparation:** Flash freeze tissue in liquid nitrogen and store at -80°C prior to shipping.
+
+**Shipping:**
+  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains
+frozen throughout shipment.
+  - It is recommended to include 5-10 pounds of dry ice for each 24-hour period of the shipment. Please pack considering potential customs, or other ship delays.
+
  
