--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -120,7 +120,7 @@ Let me know what you think. Do we have samples in hand that might work or should
 
 ## DOVETAIL TISSUE SHIPMENT
 
-###1.4. PacBio Marine Animals/Invertebrates
+### 1.4. PacBio Marine Animals/Invertebrates. 
 **Amount: 200+ mg**
 Type: Assembling PacBio libraries for marine animals (including fish, oysters, scallops and shrimp) is often more difficult than for other animals. Their tissues may contain high concentrations of several metabolic compounds and enzymes, e.g., mucopolysaccharides and alkaline phosphatases, which interfere with the PacBio library procedure. If such difficulties are expected, please communicate them to your project manager.  
 
