--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -121,7 +121,9 @@ Let me know what you think. Do we have samples in hand that might work or should
 ## DOVETAIL TISSUE SHIPMENT
 
 ### 1.4. PacBio Marine Animals/Invertebrates. 
+
 **Amount: 200+ mg**
+
 Type: Assembling PacBio libraries for marine animals (including fish, oysters, scallops and shrimp) is often more difficult than for other animals. Their tissues may contain high concentrations of several metabolic compounds and enzymes, e.g., mucopolysaccharides and alkaline phosphatases, which interfere with the PacBio library procedure. If such difficulties are expected, please communicate them to your project manager.  
 
 Recommended tissue sources in the preferred order are:
@@ -133,12 +135,13 @@ Recommended tissue sources in the preferred order are:
 Preparation: Flash freeze tissue in liquid nitrogen and store at -80°C prior to shipping.
 
 **Shipping:**
-  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains
-frozen throughout shipment.
+  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains frozen throughout shipment.
   - It is recommended to include 5-10 pounds of dry ice for each 24-hour period of the shipment. Please pack considering potential customs, or other ship delays.
 
 ### 2.6. Omni-C Marine Animals/Invertebrates
-**Amount: Minimum of 500 mg.**
+
+**Amount: Minimum of 500 mg.** 
+
 Type: Assembling Dovetail Omni-C libraries for marine invertebrates is often more difficult than for other animals. Their tissues may contain high concentrations of several metabolic compounds and enzymes, e.g., mucopolysaccharides and alkaline phosphatases, which interfere with the library construction procedure. If such difficulties are expected, please communicate them to your project manager.  
 
 Recommended tissue sources in the preferred order are:
@@ -153,8 +156,42 @@ Note: Mantle tissue does not perform well in the Dovetail Omni-C protocol. As su
 **Preparation:** Flash freeze tissue in liquid nitrogen and store at -80°C prior to shipping.
 
 **Shipping:**
-  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains
-frozen throughout shipment.
+  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains frozen throughout shipment.
   - It is recommended to include 5-10 pounds of dry ice for each 24-hour period of the shipment. Please pack considering potential customs, or other ship delays.
 
+
+Shipping Address (for PacBio and Omni-C):  
+Dovetail Genomics. 
+100 Enterprise Way Suite A101. 
+Scotts Valley, California 95066. 
+(831) 713-4465. 
+
+
+
+
+
+
+## 3.0. RNA-Seq Sample Preparation Guideline
+Biological replicates are vital to confirm the accuracy of RNA-Seq data. Please send three replicates of two different samples to provide diversity and the ability to QC the data.  
+
+3.1 Animal Tissue. 
+
+**Amount: Minimum 2mg; 10mg preferred**. 
+
+Preparation: Flash freeze tissue in liquid nitrogen and store at -80°C prior to shipping.  
+
+Shipping:
+  - Ship frozen tissue overnight with sufficient dry ice to ensure that sample remains frozen throughout shipment.
+  - It is recommended to include 5-10 pounds of dry ice for each 24-hour period of the shipment. Please pack considering potential customs, or other ship delays.
+
+* Please return an electronic copy of the submission form and include a hard copy with the shipment.
+
+Please send the samples to Genewiz's address as follows: 
+GENEWIZ, LLC. 
+Attn: NGS. 
+111 Corporate Boulevard. 
+Suite H loading dock. 
+South Plainfield, NJ 07080. 
+USA. 
+877-GENEWIZ. 
  
