--- a/genome_notebook/20210624_dovetail.md
+++ b/genome_notebook/20210624_dovetail.md
@@ -160,7 +160,7 @@ Note: Mantle tissue does not perform well in the Dovetail Omni-C protocol. As su
   - It is recommended to include 5-10 pounds of dry ice for each 24-hour period of the shipment. Please pack considering potential customs, or other ship delays.
 
 
-Shipping Address (for PacBio and Omni-C):  
+**Shipping Address (for PacBio and Omni-C):**   
 Dovetail Genomics.   
 100 Enterprise Way Suite A101.   
 Scotts Valley, California 95066.   
@@ -186,7 +186,7 @@ Shipping:
 
 * Please return an electronic copy of the submission form and include a hard copy with the shipment.
 
-Please send the samples to Genewiz's address as follows: 
+**RNAseq Shipping address:**      
 GENEWIZ, LLC.  
 Attn: NGS.  
 111 Corporate Boulevard.  
